src/test/deca/context/invalid/field_type_name.deca
//ERROR :3
class A{
int int x;
}